--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^5.1.2"
+  }
 }
