--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "flickity": "^3.0.0",
+    "howler": "^2.2.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-flickity": "^1.2.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
